--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.5.1",
+    "razorpay": "^2.9.6",
     "redis": "^4.7.0"
   },
   "devDependencies": {
