--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.8",
     "axios": "^1.7.9",
+    "draft-js": "^0.11.7",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
