--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.66.8",
     "axios": "^1.7.9",
     "draft-js": "^0.11.7",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
