--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.5.1",
     "razorpay": "^2.9.6",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
