--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.6",
     "zod": "^3.24.2"
   },
