--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Priyanjal Saxena",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
